--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
+    "next": "13.5.6",
     "react": "^18",
+    "react-bootstrap": "^2.9.1",
+    "react-countup": "^6.4.2",
     "react-dom": "^18",
-    "next": "13.5.6"
+    "react-hook-form": "^7.47.0",
+    "react-icons": "^4.11.0",
+    "react-lazy-load-image-component": "^1.6.0"
   },
   "devDependencies": {
     "eslint": "^8",
