--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
-    "react-lazy-load-image-component": "^1.6.0"
+    "react-lazy-load-image-component": "^1.6.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "eslint": "^8",
