--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "js-cookie": "^3.0.5",
+    "js-file-download": "^0.4.12",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.7.0",
+    "lottie-react": "^2.4.0",
     "next": "13.5.6",
     "react": "^18",
     "react-bootstrap": "^2.9.1",
@@ -19,7 +25,9 @@
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "react-lazy-load-image-component": "^1.6.0",
-    "react-toastify": "^9.1.3"
+    "react-loading-skeleton": "^3.3.1",
+    "react-toastify": "^9.1.3",
+    "sweetalert2": "^11.7.32"
   },
   "devDependencies": {
     "eslint": "^8",
