--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-lazy-load-image-component": "^1.6.0",
     "react-loading-skeleton": "^3.3.1",
     "react-toastify": "^9.1.3",
-    "sweetalert2": "^11.7.32"
+    "sweetalert2": "^11.7.32",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "eslint": "^8",
